--- a/PhysicsDarkUniverse/tex/EFTValidity.tex
+++ b/PhysicsDarkUniverse/tex/EFTValidity.tex
@@ -19,7 +19,7 @@ the contact interaction framework is the correct one to
 constrain new confinement scales. 
 
 Ideally, experimental constraints should be shown as bounds of allowed signal events in the kinematic regions considered for 
-the search, as detailed in Appendix~\ref{app:Presentation_Of_Experimental_Results}. 
+the search, as detailed in~\ref{app:Presentation_Of_Experimental_Results}. 
 A problematic situation is the attempt to derive a limit on
 nucleon-dark matter scattering cross sections from EFT results
 based on collider data~\footnote{Comparisons between constraints from different experiments 
@@ -274,7 +274,7 @@ both in the simplified model and in the EFT case. This can be seen in Fig.~\ref{
 	\subfloat[Invariant mass of the two WIMPs $m_{\chi \chi}$, simplified model]{
 		\includegraphics[width=0.47\linewidth]{figures/EFT/Zprime_shat} 
 	}		
-	\caption[][28pt]{Comparison of the kinematic distributions for a narrow \schannel mediator, 
+	\caption[]{Comparison of the kinematic distributions for a narrow \schannel mediator, 
 		at generator level for a jet+\MET{} signature, for varying DM masses. 
 		\label{fig:EFT_kinematics_mDM}}
 \end{figure*}
