--- a/PhysicsDarkUniverse/tex/EWSpecificModels_Appendix.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_Appendix.tex
@@ -105,8 +105,8 @@ with the  potential $V$  containing mass terms and $\phi_1 - \phi_2$
 interactions:
   \begin{eqnarray}
     V &=& -m_1^2 (\phi_1^{\dagger}\phi_1) - m_2^2 (\phi_2^{\dagger}\phi_2) + \lambda_1 (\phi_1^{\dagger}\phi_1)^2 + \lambda_2 (\phi_2^{\dagger}\phi_2)^2    \nonumber  \\
-      &+&  \lambda_3(\phi_2^{\dagger}\phi_2)(\phi_1^{\dagger}\phi_1)  + \lambda_4(\phi_2^{\dagger}\phi_1)(\phi_1^{\dagger}\phi_2) + 
-          \frac{\lambda_5}{2}\left[(\phi_1^{\dagger}\phi_2)^2 + (\phi_2^{\dagger}\phi_1)^2 \right],
+      &+&  \lambda_3(\phi_2^{\dagger}\phi_2)(\phi_1^{\dagger}\phi_1)  + \lambda_4(\phi_2^{\dagger}\phi_1)(\phi_1^{\dagger}\phi_2) \\ \nonumber
+      &+& \frac{\lambda_5}{2}\left[(\phi_1^{\dagger}\phi_2)^2 + (\phi_2^{\dagger}\phi_1)^2 \right],
   \end{eqnarray}
 
 where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carrying the same hypercharge. These doublets can be parameterized as
@@ -174,6 +174,7 @@ The cross sections for the various mono-$X$ and VBF signatures produced by this 
 
 \begin{table}[htb]
 	\centering
+	\resizebox{\columnwidth}{!}{
 	\begin{tabular}{|c||c|c|c|c|c|c|}
 		\hline
 		{\bf BM}                       &  {\bf 1}  & {\bf 2}  & {\bf 3}  & {\bf 4}  &  {\bf 5}  \\
@@ -195,6 +196,7 @@ The cross sections for the various mono-$X$ and VBF signatures produced by this 
 		$\sigma_{LHC}$ (fb)     & $1.7 \times 10^{2}$ &  $7.7 \times 10^{2}$  & $4.3 \times 10^{-2}$  & $1.2 \times 10^{-1}$  &  $2.3 \times 10^{-2}$ \\
 		\hline\hline
 	\end{tabular}
+	}
 	\caption{Five benchmarks for IDM in  ($M_{h_{1}},M_{h_{2}},M_{h_{\pm}},\lambda_{2},\lambda_{345}$) parameter space.
 		We also present the corresponding relic density ($\Omega h^2$), the spin-independent cross section for DM scattering on the proton ($\sigma_{SI}$),
 		and the LHC cross section at 13 TeV for mono-jet process $pp\to h_1,h_1+jet$ for $p_T^{jet}>100$~GeV cut ($\sigma_{LHC}$).}
