--- a/PhysicsDarkUniverse/tex/EWSpecificModels_EFT.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_EFT.tex
@@ -13,7 +13,7 @@ are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. The first part of this
 the main characteristics for a limited number of these models that could be 
 considered in early Run-2 searches. 
 However, the EFT approximation made for these operators can be problematic, see Ref.~\cite{Berlin:2014cfa} for discussion.
-For this reason, model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} 
+For this reason, model-independent results as in~\ref{app:Presentation_Of_Experimental_Results} 
 should be privileged over considering these operators as realistic benchmarks. 
 %We also recommend not to optimize searches based on those benchmark models. 
 
@@ -242,7 +242,7 @@ and references therein.
 Although with lower priority with respect to the operators above, 
 a representative dimension-8 operators can be chosen as benchmark, with the form:
  
-$$\frac{1}{\Lambda^4} \bar{\chiDM} \gamma^{\mu} \chiDM B_{\mu \nu} H^{\dagger} D^{\nu} H$$
+$$\frac{1}{\Lambda^4} \bar{\chiDM} \gamma^{\mu} \chiDM B_{\mu \nu} H^{\dagger} D^{\nu} H$$.
 
 In this case, the new physics scale is $\Lambda$ is related to the coupling
 of the DM as $\displaystyle y_{\chiDM} = \frac{1}{\Lambda^{4}}$.%\Todo{Is more detail needed here?}
@@ -284,17 +284,17 @@ Contact interaction operators like the ones in this section
 remain useful tools for comparison of the sensitivity of different search channels, 
 and for reinterpretation of other models under the correct assumptions. 
 To date, while UV-complete models are known, their phenomenology has
-not been studied in full detail as their completion involves loops~\footnote{
+not been studied in full detail as their completion involves loops.~\footnote{
 An example case for the need of loop completions is a simplified model with an additional scalar exchanged at tree level.
 The scalar couples to $WW$ and $ZZ$ in a gauge-invariant way, Integrating out the mediator 
 does not lead to the Lorentz structure of a dimension-7 operator, so it is not possible
 to generate dimension-7 operators that satisfy gauge and Lorentz invariance at the same time.
-A model with a \spinone mediator cannot be considered as an candidate for completion either, since dimension-7 operators only have scalar or pseudoscalar couplings.}. 
+A model with a \spinone mediator cannot be considered as an candidate for completion either, since dimension-7 operators only have scalar or pseudoscalar couplings.} 
 
 However, this may be the focus of future theoretical exploration, as discussed in Ref.~\cite{Crivellin:2015wva}.
 An example of a complete model 
 for scalar DM corresponding to the dimension-5 operator 
-is provided in the Appendix~\ref{app:EWSpecificModels_Appendix}.
+is provided in the~\ref{app:EWSpecificModels_Appendix}.
 Providing results for the pure EFT limit of these models will prove useful
 to cross-check the implementation of future. 
 
@@ -302,7 +302,7 @@ Given these considerations, we recommend to present results
 for these models as follows: 
 
 \begin{itemize}
-\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
+\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in~\ref{app:Presentation_Of_Experimental_Results}.  
 \item Assess the percentage of events that pass a condition of validity for the EFT approximation that does not
 depend on a specific completion, and present results removing 
 of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside the raw EFT results.
