--- a/PhysicsDarkUniverse/tex/Introduction.tex
+++ b/PhysicsDarkUniverse/tex/Introduction.tex
@@ -212,7 +212,7 @@ nor other simplified models yielding similar kinematic distributions are availab
 and implemented in one of the event generators used by both collaborations. 
 This is the case for dimension-5 or dimension-7 operators with direct 
 DM-electroweak boson couplings \footnote{An example of a dimension-5 operator for scalar
-DM is described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
+DM is described in~\ref{app:EWSpecificModels_Appendix}. 
 Dimension-7 operators of DM coupling to gauge bosons exist in the literature, but they require a larger particle spectrum
 with respect to the models studied in this report.}.
 Considering these models as separate experimental benchmarks 
@@ -268,13 +268,13 @@ Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical unc
 Chapter \ref{chapter:conclusions} concludes the report.
 
 Further models that could be studied
-beyond early searches and their implementation are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
+beyond early searches and their implementation are described in~\ref{app:EWSpecificModels_Appendix}. 
 For these models, either the implementation could not be fully developed by the time of this report,
 or some of the grounding assumptions were not fully met.  
 Some of these models have been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
 They are therefore worth considering for further studies and for Run-2 searches, since they lead to unique \MET{}+X signatures 
 that are not shared by any other of the models included in this report. 
-Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
+~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
 
 It is crucial for the success of the work of this Forum that these studies can be employed as cross-check
