--- a/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
+++ b/PhysicsDarkUniverse/tex/MonojetLikeModels.tex
@@ -463,7 +463,7 @@ Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$
 
 In this section, we consider a parallel situation to the vector and axial-vector mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\footnote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga,Haisch:2015ioa} which contain a thorough discussion of these models. 
 
-Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson. If the mediators are pure singlets of the SM, their interactions with quarks are not $SU(2)_L$ invariant. To restore this invariance, one could include the mixing of such mediators with the Higgs sector. This leads to extra interactions and a more complex phenomenology with respect to what considered in this Section (for a more complete discussion, see Refs.~\cite{Buckley:2014fba,Haisch:2015ioa}). In the interest of simplicity, we do not study models including those interactions in this report as early Run-2 benchmark models, but we give an example of a model of this kind in Appendix~\ref{sec:i2HDM}. 
+Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson. If the mediators are pure singlets of the SM, their interactions with quarks are not $SU(2)_L$ invariant. To restore this invariance, one could include the mixing of such mediators with the Higgs sector. This leads to extra interactions and a more complex phenomenology with respect to what considered in this Section (for a more complete discussion, see Refs.~\cite{Buckley:2014fba,Haisch:2015ioa}). In the interest of simplicity, we do not study models including those interactions in this report as early Run-2 benchmark models, but we give an example of a model of this kind in~\ref{sec:i2HDM}. 
 
 Relative to the vector and axial-vector models discussed above, the scalar models are distinguished by the special consequences of the MFV 
 assumption: the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
