--- a/PhysicsDarkUniverse/tex/MonojetLikeModels_Appendix.tex
+++ b/PhysicsDarkUniverse/tex/MonojetLikeModels_Appendix.tex
@@ -48,8 +48,7 @@ using at least version \texttt{3059}.
 
 \begin{itemize}
 
-\item \powheg can generate either unweighted (uniformly--weighted) or
-weighted events.  
+\item \powheg can generate either unweighted (uniformly--weighted) or weighted events.  
 The relevant keywords in the input card are \bornsuppfact and \bornktmin. 
 
 \begin{enumerate}
@@ -284,26 +283,26 @@ The \texttt{Merging:Process} command specifies the lowest parton emission proces
  \end{figure*}
 
 
- \begin{figure*}[h!]
+ \begin{figure*}[th!]
  	\centering  
  	\subfloat[$1\rightarrow2$ jets]{%
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/compare_plot_1.pdf}
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/window_plot_1.pdf}
+ 		\includegraphics[width=0.44\linewidth, height=0.45\textheight]{figures/monojet_appendix/compare_plot_1.pdf}
+ 		\includegraphics[width=0.44\linewidth, height=0.45\textheight]{figures/monojet_appendix/window_plot_1.pdf}
  	}
  	\hfill
  	\subfloat[$2\rightarrow3$ jets]{%
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/compare_plot_2.pdf}
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/window_plot_2.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/compare_plot_2.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/window_plot_2.pdf}
  	}
  	\hfill
  	\subfloat[$3\rightarrow4$ jets]{%
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/compare_plot_3.pdf}
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/window_plot_3.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/compare_plot_3.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/window_plot_3.pdf}
  	}
  	\hfill
  	\subfloat[$4\rightarrow5$ jets]{%
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/compare_plot_4.pdf}
- 		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/window_plot_4.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/compare_plot_4.pdf}
+ 		\includegraphics[width=0.44\linewidth]{figures/monojet_appendix/window_plot_4.pdf}
  	}
    \caption{Distributions of differential jet rates $\frac{dN_{i\to j}}{d \log_{10}(k_\textrm{cut})}$ for EFT D5 sample with CKKW-L matching scale at 30, 50, 70, 80 and 90\,\gev. A zoom of the region around the matching scale values is shown on right.}
    \label{fig:CKKW_D5_zoom}
