--- a/PhysicsDarkUniverse/tex/TTBar.tex
+++ b/PhysicsDarkUniverse/tex/TTBar.tex
@@ -6,7 +6,7 @@ in association with top (or bottom) pairs, as illustrated in Fig.~\ref{fig:TTbar
 Dedicated searches including jets from heavy flavor quarks in the final state
 can be designed for this signature. Another class of simplified models,  
 which includes a Dark Matter interpretation among many others, and yields a single
-top quark in the final state, is detailed in Appendix~\ref{sec:singletop}. 
+top quark in the final state, is detailed in~\ref{sec:singletop}. 
 
 \begin{figure}[htbp!]
 \centering
