Added references, some more formatting
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@477 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -2571,12 +2571,26 @@
 }
 
 
-@misc{NewMadgraphModels,
+@misc{NewMadgraphModels_SVN,
         key = {New Madgraph Models},
 	title = "Simplified dark matter models at {NLO}, {UFO} for {Feynrules}~2.3 and {\madgraph}. v0.1\_alpha: alpha version",
 	howpublished = "\url{https://feynrules.irmp.ucl.ac.be/wiki/DMsimp}",
 	year = {2015}, 
 	note = "[Online; accessed 12-June-2015]"
+}
+
+@article{NewMadgraphModels,
+	author         = "Backovi?, Mihailo and Krämer, Michael and Maltoni,
+	Fabio and Martini, Antony and Mawatari, Kentarou and
+	Pellen, Mathieu",
+	title          = "{Higher-order QCD predictions for dark matter production
+	at the LHC in simplified models with s-channel mediators}",
+	year           = "2015",
+	eprint         = "1508.05327",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "MCNET-15-24, CP3-15-25, TTK-15-19",
+	SLACcitation   = "%%CITATION = ARXIV:1508.05327;%%"
 }
 
 @article{Baur:1989cm,
