--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -190,8 +190,7 @@ This document is the final report of the ATLAS-CMS Dark Matter Forum, a forum or
 \end{abstract}
 
 \begin{keyword}
-\texttt{elsarticle.cls}\sep \LaTeX\sep Elsevier \sep template
-\MSC[2010] 00-01\sep  99-00
+	Dark Matter\sep Simplified Models \sep EFT \sep LHC
 \end{keyword}
 
 \end{frontmatter}
@@ -199,7 +198,7 @@ This document is the final report of the ATLAS-CMS Dark Matter Forum, a forum or
 \input symbols.tex
 
 \linenumbers
-\tableofcontents
+%\tableofcontents
 
 \section{Introduction}
 \label{sec:Introduction}
