--- a/PhysicsDarkUniverse/tex/SingleTop.tex
+++ b/PhysicsDarkUniverse/tex/SingleTop.tex
@@ -158,7 +158,8 @@ has been used by CMS after reintroducing the scalar option for the invisible
 state and neglecting all pseudoscalar interactions~\cite{Khachatryan:2014uma}. As
 already mentioned, a simplified setup motivated by gauge invariance and
 minimality has been preferred so that, as shown in Ref.~\cite{Boucheneb:2014wza}, we
-impose all interactions to involve right-handed quarks only,
+impose all interactions to involve right-handed quarks only~\footnote{Ref.~\cite{Allahverdi:2015mha}, 
+	which became public only after the conclusion of this Forum, introduces both left- and right-handed couplings.},
 \begin{equation}
 a^1_{FC} = b^1_{FC} = \frac12 a_R
 \end{equation}
