--- a/PhysicsDarkUniverse/authors.tex
+++ b/PhysicsDarkUniverse/authors.tex
@@ -248,15 +248,14 @@
 \address[ReAF]{FNAL, USA}
 
 \author[abcd]{Chang-Seong Moon} 
-\address[abcd]{Universidade Estadual Paulista, Spain}
+\address[abcd]{Universidade Estadual Paulista, Brazil}
  
 \author[WjaM]{Siddharth M. Narayanan} 
  
 \author[VdGC]{Andy Nelson} 
 \address[VdGC]{University of California, Irvine, USA}
  
-\author[oDSA]{S\'ergio F. Novaes} 
-\address[oDSA]{Universidade Estadual Paulista, Brazil}
+\author[abcd]{S\'ergio F. Novaes} 
  
 \author[AuRs]{Klaas Ole Padeken} 
 \address[AuRs]{RWTH Aachen University, III. Physikalisches Institut A, Aachen, Germany}
