--- a/PhysicsDarkUniverse/tex/backmatter.tex
+++ b/PhysicsDarkUniverse/tex/backmatter.tex
@@ -1,7 +1,29 @@
 \chapter{Acknowledgements}
 
 The authors would like to thank Daniel Whiteson for helping in the review of this document. 
-This research was supported by the Munich Institute for Astro- and Particle Physics (MIAPP) of the DFG cluster of excellence "Origin and Structure of the Universe".
-The authors would like to express a special thanks to the Mainz Institute for Theoretical Physics (MITP) for its hospitality and support. 
-P. Pani wishes to thank the support of the Computing Infrastructure of
-Nikhef.
+This research was supported by the Munich Institute for Astro- and Particle Physics (MIAPP) of the DFG cluster of excellence "Origin and Structure of the Universe". The authors would like to express a special thanks to the Mainz Institute for Theoretical Physics (MITP) for its hospitality and support. P. Pani wishes to thank the support of the Computing Infrastructure of Nikhef.
+In addition we thank CERN and acknowledge the support of:
+DOE and NSF (USA);
+SER, SNSF and Cantons of Bern and Geneva, Switzerland; 
+MINECO, Spain;
+European Union;
+IN2P3-CNRS, CEA-DSM/IRFU, France;
+NSERC, NRC, and CFI, Canada;
+INFN, Italy;
+FNRS and FWO, Belgium; 
+STFC, United Kingdom;
+ARC, Australia; 
+%the Royal Society and Leverhulme Trust, United Kingdom; 
+GRICES and FCT, Portugal;
+SRC, Sweden;
+BMBF, DFG, HGF, MPG and AvH Foundation, Germany; 
+Austrian Academy of Sciences, Austria; 
+MOE and UM, Malaysia;
+National Research Foundation and Ministry of Education, Science and Technology, Korea;
+MEXT and JSPS, Japan; 
+FOM and NWO, Netherlands;
+CNPq and FAPESP, Brazil;
+Atomic Energy Commission, Pakistan;
+DNRF, DNSRC and Lundbeck Foundation, Denmark;
+Thailand Center of Excellence in Physics, Institute for the Promotion of Teaching Science and Technology, Special Task Force for Activating Research and National Science and Technology Development Agency, Thailand; 
+MOST, Taiwan.
