--- a/PhysicsDarkUniverse/tex/backmatter.tex
+++ b/PhysicsDarkUniverse/tex/backmatter.tex
@@ -1,4 +1,4 @@
-\chapter{Acknowledgements}
+\section*{Acknowledgements}
 
 The authors would like to thank Daniel Whiteson for helping in the review of this document. 
 This research was supported by the Munich Institute for Astro- and Particle Physics (MIAPP) of the DFG cluster of excellence "Origin and Structure of the Universe". The authors would like to express a special thanks to the Mainz Institute for Theoretical Physics (MITP) for its hospitality and support. P. Pani wishes to thank the support of the Computing Infrastructure of Nikhef.
@@ -27,3 +27,5 @@ Atomic Energy Commission, Pakistan;
 DNRF, DNSRC and Lundbeck Foundation, Denmark;
 Thailand Center of Excellence in Physics, Institute for the Promotion of Teaching Science and Technology, Special Task Force for Activating Research and National Science and Technology Development Agency, Thailand; 
 MOST, Taiwan.
+
+\clearpage
