Added Goudelis's fixes to references
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@481 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/authors.tex
+++ b/PhysicsDarkUniverse/authors.tex
@@ -302,7 +302,7 @@
 \author[Mcmr]{Rainer Roehrig} 
 \address[Mcmr]{Max-Planck-Institut fuer Physik, Germany}
  
-\author[EruR]{David Salek} 
+\author[EruR]{David Salek (editor)} 
 \address[EruR]{Nikhef and GRAPPA, Netherlands}
  
 \author[Xmxx]{Arturo Sanchez Pineda} 
