--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -1641,21 +1641,22 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:0906.1609;%%",
 }
-@article{Goudelis:2013uca,
-      author         = "Goudelis, A. and Herrmann, B. and St{\r{o}}l, O.",
-      title          = "Dark matter in the {Inert Doublet Model} after the
-                        discovery of a {Higgs}-like boson at the {LHC}",
-      journal        = "JHEP",
-      volume         = "1309",
-      pages          = "106",
-      doi            = "10.1007/JHEP09(2013)106",
-      year           = "2013",
-      eprint         = "1303.3010",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      reportNumber   = "LAPTH-006-13",
-      SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%",
+@article{IDMposthiggs, 
+      author         = "Goudelis, A. and Herrmann, B. and St\aa{}l, O.", 
+      title          = "Dark matter in the {Inert Doublet Model} after the 
+                        discovery of a Higgs-like boson at the {LHC}", 
+      journal        = "JHEP", 
+      volume         = "1309", 
+      pages          = "106", 
+      doi            = "10.1007/JHEP09(2013)106", 
+      year           = "2013", 
+      eprint         = "1303.3010", 
+      archivePrefix  = "arXiv", 
+      primaryClass   = "hep-ph", 
+      reportNumber   = "LAPTH-006-13", 
+      SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%", 
 }
+
 @article{Burgess:2000yq,
       author         = "Burgess, C.P. and Pospelov, Maxim and ter Veldhuis,
                         Tonnis",
