--- a/PhysicsDarkUniverse/tex/EWSpecificModels_Appendix.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_Appendix.tex
@@ -94,7 +94,7 @@ experiments as well as relic density constraints.
 The idea of an inert Two-Higgs Doublet Model (IDM) was introduced
 more than 30 years ago in Ref~\cite{Deshpande:1977rw}. The IDM was
 first proposed as a Dark Matter model in Ref.~\cite{IDMnaturalness} and its
-phenomenology further studied in Refs.~\cite{LopezHonorez:2006gr,ScalarMultiplet,IDMnewviable,IDMgammalines,Dolle:2009fn,ATL-PHYS-PUB-2014-007,IDMnu1,IDMnu2,IDMpos,IDMVIB,Goudelis:2013uca,Belyaev:2015tap}. It is an extension of the SM with a second scalar 
+phenomenology further studied in Refs.~\cite{LopezHonorez:2006gr,ScalarMultiplet,IDMnewviable,IDMgammalines,Dolle:2009fn,ATL-PHYS-PUB-2014-007,IDMnu1,IDMnu2,IDMpos,IDMVIB,IDMposthiggs,Belyaev:2015tap}. It is an extension of the SM with a second scalar 
 doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, 
 under which $\phi_2$ is odd and all the other fields are even. 
 The Lagrangian of the odd sector is,
@@ -124,7 +124,7 @@ where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carryi
   \end{pmatrix}
 \end{equation}
 
-In addition to the SM, the IDM introduces four more degrees of freedom coming from the inert doublet in the form of a $Z_2$-odd charged scalar $h^\pm$ and two neutral $Z_2$-odd scalars $h_1$ and $h_2$. The lightest neutral scalar, $h_1$ is identified as the dark matter candidate. Aspects of the IDM collider phenomenology have been studied in \cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela, Belyaev:2015tap,IDMnaturalness,IDMLEPII,IDMLHChinvfirst,IDMdileptons1,IDMtrileptons,IDMmultileptons,IDMhgaga1,IDMhgaga2,IDMposthiggs,IDMdileptonsII}. Its LHC signatures include dileptons \cite{IDMdileptons1,IDMdileptonsII}, trileptons \cite{IDMtrileptons} and multileptons \cite{IDMmultileptons} along with missing transverse energy, modifications of the Higgs branching ratios \cite{IDMhgaga1,IDMhgaga2,Goudelis:2013uca}, as well as $\slashed{E}_T + \rm{jet}$, Z, and Higgs and $\slashed{E}_T + \rm{VBF}$ signals (see Figs.~\ref{fig:fdmonojet1}--\ref{fig:fdvbf}).
+In addition to the SM, the IDM introduces four more degrees of freedom coming from the inert doublet in the form of a $Z_2$-odd charged scalar $h^\pm$ and two neutral $Z_2$-odd scalars $h_1$ and $h_2$. The lightest neutral scalar, $h_1$ is identified as the dark matter candidate. Aspects of the IDM collider phenomenology have been studied in \cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela, Belyaev:2015tap,IDMnaturalness,IDMLEPII,IDMLHChinvfirst,IDMdileptons1,IDMtrileptons,IDMmultileptons,IDMhgaga1,IDMhgaga2,IDMposthiggs,IDMdileptonsII}. Its LHC signatures include dileptons \cite{IDMdileptons1,IDMdileptonsII}, trileptons \cite{IDMtrileptons} and multileptons \cite{IDMmultileptons} along with missing transverse energy, modifications of the Higgs branching ratios \cite{IDMhgaga1,IDMhgaga2,IDMposthiggs}, as well as $\slashed{E}_T + \rm{jet}$, Z, and Higgs and $\slashed{E}_T + \rm{VBF}$ signals (see Figs.~\ref{fig:fdmonojet1}--\ref{fig:fdvbf}).
 
 \begin{figure}
 \includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-j1.pdf} 
@@ -163,7 +163,7 @@ fusion process, adapted from \cite{Belyaev:2015tap}.}
 \label{fig:fdvbf}
 \end{figure}
 
-Based on the various LHC search channels, DM phenomenology issues and theoretical considerations, numerous works have proposed benchmark scenarios for the IDM, see e.g. \cite{IDMmultileptons,Goudelis:2013uca} while a FeynRules implementation (including MadGraph, CalcHEP and micrOMEGAs model files) was provided in \cite{IDMmultileptons}. An updated analysis of the parameter space has recently been performed in Ref.~\cite{Belyaev:2015tap}. 
+Based on the various LHC search channels, DM phenomenology issues and theoretical considerations, numerous works have proposed benchmark scenarios for the IDM, see e.g. \cite{IDMmultileptons,IDMposthiggs} while a FeynRules implementation (including MadGraph, CalcHEP and micrOMEGAs model files) was provided in \cite{IDMmultileptons}. An updated analysis of the parameter space has recently been performed in Ref.~\cite{Belyaev:2015tap}. 
 
 The authors suggested to study mono-X  signatures that are relevant to model-independent collider DM searches,
 and evaluated their rates presented below. They have implemented and cross-checked the IDM model into CalcHEP and micrOMEGAs,
