fixes for texlive 2016

--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -9,7 +9,7 @@ are recommended for Higgs+\MET searches:
 \end{itemize}
 
 
-\begin{figure}[!htpb!tpd]
+\begin{figure}[!htp]
 	\centering
 	\unitlength=0.0046\textwidth
 	\subfloat[\label{subfig:modelMonoHZprimeqq}]{
@@ -66,7 +66,7 @@ and
 	\label{fig:feyn_prod_monoH}
 \end{figure}
 		
-\begin{figure}[!htpb!tpd]
+\begin{figure}[!htp]
 	\centering
 	\unitlength=0.0046\textwidth
 	\subfloat[\label{subfig:modelMonoHbaryonicqq}]{
