--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -26,7 +26,7 @@ flavor-changing neutral interactions of the top quark with a quark of the
 first or second generation and the invisible $V$ boson (see the diagrams of
 \ref{fig:feyn_prod}~(b) and (c)).
 
-\begin{figure}[!h!tpd]
+\begin{figure}[!htp]
 \centering
 \unitlength=0.0046\textwidth
 \subfloat[\label{subfig:S1}]{
