--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -6,6 +6,8 @@
 
 \journal{Physics of the Dark Universe}
 
+\usepackage[utf8x]{inputenc}
+
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Elsevier bibliography styles
 %%%%%%%%%%%%%%%%%%%%%%%
