--- a/PhysicsDarkUniverse/tex/SingleTop.tex
+++ b/PhysicsDarkUniverse/tex/SingleTop.tex
@@ -19,7 +19,7 @@ flavor-changing neutral interactions of the top quark with a quark of the
 first or second generation and the invisible $V$ boson (see the diagrams of
 \ref{fig:feyn_prod}~(b) and (c)).
 
-\begin{figure}[!h!tpd]
+\begin{figure}[!h]
 \centering
 \unitlength=0.0046\textwidth
 \subfloat[\label{subfig:S1}]{
