--- a/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
@@ -9,7 +9,7 @@ are recommended for Higgs+\MET searches:
 \end{itemize}
 
 
-\begin{figure}[!htpb!tpd]
+\begin{figure}[!htpb]
 	\centering
 	\unitlength=0.0046\textwidth
 	\subfloat[\label{subfig:modelMonoHZprimeqq}]{
@@ -62,7 +62,7 @@ and
 	\label{fig:feyn_prod_monoH}
 \end{figure}
 		
-\begin{figure}[!htpb!tpd]
+\begin{figure}[!htpb]
 	\centering
 	\unitlength=0.0046\textwidth
 	\subfloat[\label{subfig:modelMonoHbaryonicqq}]{
